# InstantaneousInterface

./: .gitignore  CMakeLists.txt  README.md  build_cpu.sh  curve.cpp  display.cpp  main.cpp  mesh_display.cpp  mesh_gen.cpp  mesh_op.cpp
CGAL/: version.h
Eigen/unsupported/Eigen/: NonLinearOptimization  NumericalDiff
MarchingCubes/: CMakeLists.txt  TriangulateGlobal.hpp
ModelViewer/: CMakeLists.txt  GLMesh.cpp  GLMesh.h  Mesh.h  Shader.cpp  Shader.h  glad.c  glad.h
cmake/: FindCGAL.cmake  FindGLFW3.cmake
cmc_surface/: CMakeLists.txt  edgemesh.h  fast_rdt.cpp  fast_rdt.h  geex_utils.h
cmc_surface/HLBFGS/: CMakeLists.txt  HLBFGS.cpp  HLBFGS.h  HLBFGS_BLAS.cpp  HLBFGS_BLAS.h  ICFS.cpp  ICFS.h  LineSearch.cpp  LineSearch.h  Lite_Sparse_Matrix.cpp  Lite_Sparse_Matrix.h  Sparse_Entry.h
parallel/: CMakeLists.txt
scripts/: PythonPlotting.ipynb  build.sh  ny.out  plot.m  sample_sphere.ply  triangle_indices.ply  ty.out  vy.out
scripts/.ipynb_checkpoints/: PythonPlotting-checkpoint.ipynb  Untitled-checkpoint.ipynb
scripts/Zac_data/: cZac.out  cfit.out  fZac.out  nZac.out  tZac.out  vZac.out
src/: AFP_shapes.cpp  AFP_shapes.h  AtomGroup.cpp  AtomGroup.h  AtomGroupParsingStrategy.cpp  AtomGroupParsingStrategy.h  AverageCurvature.cpp  AverageCurvature.h  AverageCurvatureTensor.h  AverageField.cpp  AverageField.h  AverageFieldProperty.cpp  AverageFieldProperty.h  Bin.cpp  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Contour.cpp  Contour.h  Curvature.cpp  Curvature.h  CurvatureCurveFit.cpp  CurvatureCurveFit.h  CurvatureEvolution.cpp  CurvatureEvolution.h  CurvatureFDM.cpp  CurvatureFDM.h  CurvatureJetFit.cpp  CurvatureJetFit.h  CurvatureQuadraticFit.cpp  CurvatureQuadraticFit.hpp  CurvatureTensor.cpp  CurvatureTensor.h  DegeneratedTriangleRemoval.cpp  DegeneratedTriangleRemoval.h  DensityField.cpp  DensityField.h  DensityFieldKernel.cu  DensityFieldKernel.h  Driver.cpp  (+58 more)
src/ICP/: CMakeLists.txt  ICP.cpp  ICP.h  KdTree.cpp  KdTree.h
test/: CMakeLists.txt  run_test.sh
test/Images/: smoothed.tga  unsmoothed.tga
test/SampleTraj/: .test.xtc_offsets.npz  ans.gro  confout.gro  input.tpr  solid_like_atoms.index  solid_like_atoms5400.index  test.gro  test.tpr
test/TODOtest/BoundarySmoothing/: Surface.tga  Untitled.ipynb  curvefit.out  curvefit_o_fc.out  cut.ply  cut_nonpbc.ply  cut_side.tga  cut_top.tga  evolved_side.tga  jetfit.out  jetfit_o_fc.out  non.ply  nonp.ply  o.ply  output.ply  output_nonpbc.ply  run.sh  smooth_fc.out  smoothed.ply  smoothed_fc.out  smoothed_nonpbc.ply  smoothed_side.tga  smoothed_top.tga  target_nonpbc.ply  vmdscene.tga
test/TODOtest/CurvatureProjection/: c.out  faceC.out  hit.out  plotCurvatre.py  run.sh  sbwAFP_cut.ply  test.ply
test/TODOtest/ModelViewer/: fragment.glsl  vertex.glsl
test/TODOtest/Zacdata/: .SampleInputZac.dat.swp  IIcurvature.out  nnN.out  nnN2.out  plot.m  zacII.ply  zacfield.out
test/TODOtest/evolution/: evo.ply  evo_bound.out  evo_nonpbc.ply  generated.ply
test/TODOtest/generation/: generated_bound.out  generated_nonpbc.ply
test/TODOtest/interface/: IIcurvature.out  jetfit.out  jetfit_fc.out  run.sh  tensor.out  zacII.ply  zacfield.out
test/TODOtest/smoothing/curvature_flow/: Ice_nonpbc.ply  cflow.ply  cflow_nonpbc.ply
test/TODOtest/smoothing/umbrella/: Ice.ply  umbrella.ply  umbrella_nonpbc.ply
test/TODOtest/sphere/: FDM.out  FDM_face.out  FDMfit.out  FDMfit_face.out  GenerateSphere.ipynb  curvefit.out  curvefit_face.out  jetfit.out  jetfit_face.out  run.sh  sample_sphere.ply  tensor.out  tensor_face.out  tensorfit.out  tensorfit_face.out
test/TODOtest/sphere/MeshQuality/: Ice_3200_cut.ply  Ice_3200_processed.ply  Ice_3200_s.ply  jetfit.out  jetfit_fc.out  nonpbc.out  projected_jet.out  run.sh
test/TestAtomSelection/TestAtomIndexSelection/: main.cpp
test/TestAtomSelection/TestAtomTypeSelection/: main.cpp
test/TestAtomSelection/TestIndexFileSelection/: main.cpp
test/TestAtomSelection/TestResidueNumberSelection/: main.cpp
test/TestRotation/: main.cpp
tools/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  CommandLineArguments.cpp  CommandLineArguments.h  CommonOperations.h  CommonTypes.h  FileSystem.cpp  FileSystem.h  InputParser.cpp  InputParser.h  OutputFunction.cpp  OutputFunction.h
xdr/: CMakeLists.txt  Frame.h  GroFile.cpp  TrrFile.cpp  TrrFile.h  XdrWrapper.cpp  XdrWrapper.h  XtcFile.cpp  XtcFile.h
